Finalizado component cabeçalho

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <app-cabecalho></app-cabecalho>
 
-<app-principal></app-principal>
+<!-- <app-principal></app-principal>
 
 <app-download></app-download>
 
@@ -8,4 +10,4 @@
 
 <app-screenshots></app-screenshots>
 
-<app-rodape></app-rodape>
+<app-rodape></app-rodape> -->
