--- a/src/app/cabecalho/cabecalho.component.html
+++ b/src/app/cabecalho/cabecalho.component.html
@@ -1,3 +1,21 @@
 <div class="cabecalho">
-    <p>cabecalho works!</p>
+
+    <div class="conteudo">
+        <a href="https://www.facebook.com/NarutoShippuudenNewAge/"><i class="fab fa-facebook-square fa-2x"></i></a>
+
+        <a href="https://www.youtube.com/user/EpicMickeyBR"><i class="fab fa-youtube fa-2x redes-sociais"></i></a>
+
+        <a class="github-link" href="https://github.com/Danepic/NS-New-Age"><i class="fab fa-github-square fa-2x redes-sociais"></i></a>
+
+        <div class="direita">
+
+            <a class="waves-effect waves-light btn blue darken-4">English</a>
+
+            <a class="waves-effect waves-light btn green darken-1 disabled">Português</a>
+
+        </div>
+
+
+    </div>
+
 </div>
